# rIC3

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker.yml  rust.yml
examples/: asmpt.aig  asmpt.v  counter.aig  two_cnt.aig  two_cnt.btor
src/: activity.rs  analysis.rs  args.rs  basic.rs  bmc.rs  broadcast.rs  cex.rs  command.rs  frame.rs  frames.rs  imc.rs  kind.rs  lib.rs  main.rs  mic.rs  model.rs  options.rs  portfolio.rs  proofoblig.rs  solver.rs  statistic.rs  verify.rs  worker.rs
src/frontend/: abc.rs  aig.rs  mod.rs
src/general/: mic.rs  mod.rs  others.rs  solver.rs
src/gipsat/: analyze.rs  cdb.rs  domain.rs  mod.rs  option.rs  pred.rs  propagate.rs  search.rs  simplify.rs  statistic.rs  utils.rs  vsids.rs
src/ic3/: activity.rs  frame.rs  mic.rs  mod.rs  proofoblig.rs  solver.rs  statistic.rs  verify.rs
src/image/: bdd.rs  mod.rs
src/pdr/: activity.rs  basic.rs  frames.rs  heap_frame_cube.rs  mic.rs  mod.rs  pdr.rs  pdr_circuit.rs  postimage.rs  share.rs  solver.rs  statistic.rs  worker.rs
src/pdr/parallel/: mod.rs  partition.rs  shared_frames.rs  solver_pool.rs
src/preimage/: cav11.rs  circuit_sat.rs  mod.rs
src/transys/: abc.rs  builder.rs  mod.rs  others.rs  sec.rs  simplify.rs  simulate.rs  unroll.rs
src/utils/: aig_bdd.rs  aig_with_bdd.rs  bdd2aig.rs  generalize.rs  mod.rs  relation.rs  state_transform.rs
src/wl/: mod.rs
src/wl/transys/: mod.rs
