[package]
name = "rIC3"
version = "1.1.0"
edition = "2021"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aig = { path = "./deps/aig-rs", version = "*" }
minisat = { path = "./deps/minisat-rs", version = "*" }
cadical = { path = "./deps/cadical-rs", version = "*" }
kissat = { path = "./deps/kissat-rs", version = "*" }
logic-form = { path = "./deps/logic-form", version = "*" }
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
ctrlc = { version = "3.4.1", features = ["termination"] }
giputils = { path = "./deps/giputils", version = "*" }
satif = { path = "./deps/satif", version = "*" }
bitfield-struct = "0.8.0"
abc = { path = "./deps/abc-rs", version = "*" }
tempfile = "3.10.1"
process_control = "4.1.0"
nix = { version = "0.27.1", features = ["signal"] }
procspawn = "1.0.0"
btor = { path = "./deps/btor-rs", version = "*" }
shadow-rs = "0.34.0"

[build-dependencies]
shadow-rs = "0.34.0"

[features]
default = ["no_bound_check"]
no_bound_check = ["logic-form/no_bound_check", "giputils/no_bound_check"]
