[package]
name = "rIC3"
version = "1.3.3"
edition = "2021"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
repository = "https://github.com/gipsyh/rIC3"
description = "rIC3: An efficient hardware model checker"
keywords = ["formal-verification", "model-checking", "IC3"]
license = "GPL-3.0"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aig = { path = "./deps/aig-rs", version = "0.2.6" }
satif-minisat = { path = "./deps/minisat-rs", version = "0.2" }
satif-cadical = { path = "./deps/cadical-rs", version = "0.1" }
satif-kissat = { path = "./deps/kissat-rs", version = "0.4" }
logic-form = { path = "./deps/logic-form", version = "0.2.6" }
giputils = { path = "./deps/giputils", version = "0.2.3" }
satif = { path = "./deps/satif", version = "0.1" }
abc-rs = { path = "./deps/abc-rs", version = "0.2" }
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
ctrlc = { version = "3.4.1", features = ["termination"] }
bitfield-struct = "0.10.0"
tempfile = "3.10.1"
process_control = "5.0.0"
nix = { version = "0.29.0", features = ["signal"] }
procspawn = "1.0.0"
shadow-rs = "0.38.0"

[build-dependencies]
shadow-rs = "0.38.0"

[features]
default = ["no_bound_check"]
no_bound_check = ["logic-form/no_bound_check", "giputils/no_bound_check"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
strip = true
